--- a/src/style.scss
+++ b/src/style.scss
@@ -1,115 +1,123 @@
 $max-content-width: 800px;
 
 @mixin content-area {
-  width: 100%;
-  max-width: $max-content-width;
+    width: 100%;
+    max-width: $max-content-width;
 }
 
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 mdui-dialog,
 mdui-navigation-drawer {
-  backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
 }
 
 #top-app-bar {
-  position: fixed;
-  top: 0;
+    position: fixed;
+    top: 0;
 }
 
 #container {
-  overflow-y: auto;
-  height: 100vh;
-  box-sizing: border-box;
+    overflow-y: auto;
+    height: 100vh;
+    box-sizing: border-box;
 }
 
 a {
-  color: rgb(var(--mdui-color-primary));
-  text-decoration: none;
-  transition: all .2s;
-
-  &:active {
     color: rgb(var(--mdui-color-primary));
-  }
+    text-decoration: none;
+    transition: all .2s;
 
-  &:hover {
-    text-decoration: underline;
-  }
+    &:active {
+        color: rgb(var(--mdui-color-primary));
+    }
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 #installer-download-div,
 #download-button-div {
-  display: flex;
-  align-items: center;
-  padding: 0 32px;
-  flex-direction: column;
-  box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+
+    &#installer-download-div {
+        padding: 0 32px;
+    }
+
+    &#download-button-div {
+
+    }
 }
 
 #installer-app-info {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 32px;
-  @include content-area;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 32px;
+    @include content-area;
 }
 
 #package-info-div {
-  display: flex;
-
-  #app-version,
-  #app-name-title {
-    margin: 0 !important;
-  }
-
-  #app-name-div {
     display: flex;
-    flex-direction: column;
-    margin-left: 10px !important;
-  }
+
+    #app-version,
+    #app-name-title {
+        margin: 0 !important;
+    }
+
+    #app-name-div {
+        display: flex;
+        flex-direction: column;
+        margin-left: 10px !important;
+    }
 }
 
 #installer-app-icon {
-  width: 65px;
-  height: auto;
+    width: 65px;
+    height: auto;
 }
 
 .description-card {
-  margin-bottom: 32px;
-  padding: 16px;
-  @include content-area;
+    margin-bottom: 32px;
+    padding: 16px;
+    @include content-area;
+
 }
 
 #sereenshot-div {
-  margin: 32px 0;
-  overflow-x: auto;
-  display: flex;
-  width: 100%;
-  max-width: $max-content-width;
-  box-sizing: border-box;
+    margin: 32px 0;
+    overflow-x: auto;
+    display: flex;
+    width: 100%;
+    max-width: $max-content-width;
+    box-sizing: border-box;
 
-  img {
-    height: 300px;
-    width: auto;
-    border-radius: 12px;
-    border: 0.0625rem solid rgb(var(--mdui-color-surface-variant));
-    cursor: pointer;
+    img {
+        height: 300px;
+        width: auto;
+        border-radius: 12px;
+        border: 0.0625rem solid rgb(var(--mdui-color-surface-variant));
 
-    &:not(:last-child) {
-      margin-right: 8px;
+        &:not(:last-child) {
+            margin-right: 8px;
+        }
     }
-  }
 }
 
 .description-title {
-  margin: 8px 0;
-  display: flex;
-  align-items: center;
-  padding-left: 8px;
+    margin: 8px 0;
+    display: flex;
+    align-items: center;
+    padding-left: 8px;
 
-  mdui-icon {
-    margin-right: 8px;
-  }
+    mdui-icon {
+        margin-right: 8px;
+    }
 }
